--- a/XYZ-TOPIC.css
+++ b/XYZ-TOPIC.css
@@ -11,17 +11,15 @@ a:hover {
 h1{
 	font-size:10vw;
 }
-h5{
-	font-size:3vw;
-}
+
 
 body{
 	background-color:#345E90;
     color:white;
 }
-.row{
+/* .row{
 	height:100%;
-}
+} */
 
 .btn{
 	border-radius:10px;
@@ -47,15 +45,24 @@ body{
 	
 	margin:auto;
 }
+
 #genX{
 	background-color:#e0af95;
 }
+
+.X{
+	background-color:grey;
+	color:white;
+	height: 100%;
+}
+
 #genY{
 	background-color:#dd9d7b;
 }
 #genZ{
 	background-color:#e58958;
 }
+
 
 .bottom{
 	height:25px;
@@ -79,6 +86,9 @@ body{
 #annoying{
 	display:none;
 }
+
+
+
 @media(max-width:768px){
 
 #storyA #storyB #storyC{ 
