--- a/XYZ-TOPIC.css
+++ b/XYZ-TOPIC.css
@@ -62,6 +62,11 @@ body{
 	background-color: #E3FF99 ;
 }
 
+#A:hover{
+	background-image: url(img/p1.png);
+	background-size: cover; 
+}
+
 .a{
 	color: #E3FF99 ;
 }
@@ -69,6 +74,12 @@ body{
 
 #B{
 	background-color: #AAFF99;
+	
+}
+
+#B:hover{
+	background-image: url(img/t2.png);
+	background-size: cover; 
 }
 
 .b{
@@ -77,6 +88,12 @@ body{
 
 #C{
 	background-color: #00E0C4;
+	
+}
+
+#C:hover{
+	background-image: url(img/f1.png);
+	background-size: cover; 
 }
 
 .c{
@@ -87,13 +104,24 @@ body{
 	background-color: #B084CC;
 }
 
+#D:hover{
+	background-image: url(img/s1.png);
+	background-size: cover; 
+}
+
 .d{
 	color: #B084CC;
 }
 
 #E{
 	background-color:#7B6DE6 ;
+
 }
+
+#E:hover{
+
+}
+
 .e{
 
 	color:#7B6DE6 ;
@@ -103,7 +131,7 @@ body{
 }
 
 .X{
-	background-color: rgba(155,155,155,0.4);
+	background-color: rgba(103, 103, 103, 0.6);
 	color:white;
 	height: 100%;
 }
