--- a/XYZ.css
+++ b/XYZ.css
@@ -121,7 +121,7 @@ a:hover {
 
 #A{
 
-	background-image:url(img/Politics.gif);
+	background-image:url(img/Politicsv3.gif);
 	background-size: cover; 
 	background-color: #E3FF99 ;
 }
@@ -130,7 +130,7 @@ a:hover {
 
 #B{
 	background-color: #7B6DE6;
-	background-image: url(img/Tech.gif);
+	background-image: url(img/Techv3.gif);
 	background-size: cover; 
 
 }
@@ -141,8 +141,8 @@ a:hover {
 
 #C{
 	background-color: #00E0C4;
-	background-image: url(img/Fashion.gif);
-	background-size: cover; 
+	background-image: url(img/Fashionv3.gif);
+	background-size: 200px 200px; 
 }
 
 .c{
@@ -151,7 +151,7 @@ a:hover {
 
 #D{
 	background-color: #B084CC;
-	background-image: url(img/Slang.gif);
+	background-image: url(img/Slangv3.gif);
 	background-size: cover; 
 }
 
@@ -161,7 +161,7 @@ a:hover {
 
 #E{
 	background-color:#AAFF99 ;
-	background-image: url(img/Music.gif);
+	background-image: url(img/Musicv3.gif);
 	background-size: cover; 
 
 }
