--- a/XYZ-TOPIC.css
+++ b/XYZ-TOPIC.css
@@ -32,6 +32,16 @@ audio {
 	width: 100%;
 }
 
+.clear{
+	color: white;
+
+}
+
+#mc_embed_signup_scroll{
+	background-color: #345E90;
+	color: white;
+}
+
 .random-DT{
 	margin-top: 1px;
 }
@@ -47,7 +57,6 @@ body{
 .btn{
 	border-radius:10px;
 	vertical-align:middle;
-	background-color:black;
 }
 
 .articleTitle{
@@ -59,6 +68,7 @@ body{
 	bottom: 0;
 	width: 100%;
 }
+
 
 .Desc {
 	padding-bottom: 23px;
