--- a/XYZ-TOPIC.css
+++ b/XYZ-TOPIC.css
@@ -37,9 +37,20 @@ audio {
 
 }
 
+#mc_embed_signup form {
+    display: block !important;
+    position: relative !important;
+    text-align: center !important;
+    padding: 0 !important;
+}
+
 #mc_embed_signup_scroll{
 	background-color: #345E90 !important;
 	color: white !important;
+}
+
+#mc_embed_signup input.button{
+	display: initial !important;
 }
 
 .random-DT{
