--- a/XYZ-TOPIC.css
+++ b/XYZ-TOPIC.css
@@ -44,6 +44,10 @@ audio {
     padding: 0 !important;
 }
 
+#mc_embed_signup input.email {
+	display: inline !important;
+}
+
 #mc_embed_signup_scroll{
 	background-color: #345E90 !important;
 	color: white !important;
