--- a/XYZ-TOPIC.css
+++ b/XYZ-TOPIC.css
@@ -18,8 +18,11 @@ h1{
 }
 
 .btn-outline-secondary{
-	background-color: transparent !important;
+	border-width: 5px;
+	border-radius: 10px;
+	vertical-align:middle;
 	color: white;
+
 }
 
 h2{
@@ -74,8 +77,7 @@ body{
 } */
 
 .btn{
-	border-radius:10px;
-	vertical-align:middle;
+	
 }
 
 .articleTitle{
@@ -119,7 +121,7 @@ body{
 
 
 #A:hover{
-	background-image: url(img/Politics.gif);
+	background-image: url(img/politicsv3.gif);
 	background-size: cover; 
 }
 
@@ -134,7 +136,7 @@ body{
 }
 
 #B:hover{
-	background-image: url(img/Tech.gif);
+	background-image: url(img/techv3.gif);
 	background-size: cover; 
 }
 
@@ -148,7 +150,7 @@ body{
 }
 
 #C:hover{
-	background-image: url(img/Fashion.gif);
+	background-image: url(img/fashionv3.gif);
 	background-size: cover; 
 }
 
@@ -161,7 +163,7 @@ body{
 }
 
 #D:hover{
-	background-image: url(img/Slang.gif);
+	background-image: url(img/slangv3.gif);
 	background-size: cover; 
 }
 
@@ -176,7 +178,7 @@ body{
 
 #E:hover{
 
-	background-image: url(img/Music.gif);
+	background-image: url(img/musicv3.gif);
 	background-size: cover; 
 
 }
