--- a/XYZ.css
+++ b/XYZ.css
@@ -1,3 +1,35 @@
+body {
+  padding-top: 81px;
+}
+
+header.yr-fixed-header {
+  position: fixed;
+  z-index: 500;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 0 32px;
+  height: 81px;
+  background-color: #2E2E2E;
+}
+
+header.yr-fixed-header .logo a {
+  display: block;
+  outline: 0;
+  width: 40px;
+  height: 40px;
+}
+
+header.yr-fixed-header .search a {
+  display: block;
+  outline: 0;
+  width: 29px;
+  height: 29px;
+}
+
 /*div{
 	border: 1px solid black;
 }*/
@@ -92,27 +124,27 @@ a:hover {
 
 /* #A:hover{
 	background-image: url(img/Politics.gif);
-	background-size: cover; 
+	background-size: cover;
 }
 
 #B:hover{
 	background-image: url(img/Tech.gif);
-	background-size: cover; 
+	background-size: cover;
 }
 
 #C:hover{
 	background-image: url(img/Fashion.gif);
-	background-size: cover; 
+	background-size: cover;
 }
 
 #D:hover{
 	background-image: url(img/Slang.gif);
-	background-size: cover; 
+	background-size: cover;
 }
 
 #E:hover{
 	background-image: url(img/Music.gif);
-	background-size: cover; 
+	background-size: cover;
 } */
 
 .a{
@@ -122,7 +154,7 @@ a:hover {
 #A{
 
 	background-image:url(img/politicsv3.gif);
-	background-size: cover; 
+	background-size: cover;
 	background-color: #E3FF99 ;
 }
 
@@ -131,7 +163,7 @@ a:hover {
 #B{
 	background-color: #7B6DE6;
 	background-image: url(img/techv3.gif);
-	background-size: cover; 
+	background-size: cover;
 
 }
 
@@ -142,7 +174,7 @@ a:hover {
 #C{
 	background-color: #00E0C4;
 	background-image: url(img/fashionv3.gif);
-	background-size: 200px 200px; 
+	background-size: 200px 200px;
 }
 
 .c{
@@ -152,7 +184,7 @@ a:hover {
 #D{
 	background-color: #B084CC;
 	background-image: url(img/slangv3.gif);
-	background-size: cover; 
+	background-size: cover;
 }
 
 .d{
@@ -162,7 +194,7 @@ a:hover {
 #E{
 	background-color:#AAFF99 ;
 	background-image: url(img/musicv3.gif);
-	background-size: cover; 
+	background-size: cover;
 
 }
 .e{
@@ -192,7 +224,7 @@ a:hover {
 
 @media(max-width:768px){
 
-#A #B #C #D #E{ 
+#A #B #C #D #E{
 		display:block;
 		float:none;
 		width:100%;
